translation-tool/inputs/source_meta/objects/HSvc_AccTrxnToProviderGroup__c.object
<CustomObject>
    <fields>
        <fullName>Account_Transaction_Reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Transaction Reason</label>
        <referenceTo>HSvc_AccTrxnReason__c</referenceTo>
        <relationshipLabel>Account Transaction To Provider Groups</relationshipLabel>
        <relationshipName>Account_Transaction_To_Provider_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_ActiveFormula__c</fullName>
        <formula>AND(
  HSvc_Expiry_Date__c &gt;= TODAY(),
  HSvc_Effective_Date__c &lt;= TODAY()

)</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_ProviderGroup__c</fullName>
        <label>ProviderGroup</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
				<value>
                    <fullName>Ent SA Frontline</fullName>
                </value>
                <value>
                    <fullName>Ent SA Field Support</fullName>
                </value>
                <value>
                    <fullName>Ent SA Control Desk</fullName>
                </value>
                <value>
                    <fullName>Ent SA Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Affinitas Phoenix MOD</fullName>
                </value>
                <value>
                    <fullName>Affinitas Phoenix Universal</fullName>
                </value>
                <value>
                    <fullName>Call Center Manager</fullName>
                </value>
                <value>
                    <fullName>Consumer Auto Generated</fullName>
                </value>
                <value>
                    <fullName>CPM Escalations</fullName>
                </value>
                <value>
                    <fullName>CS Program Management NAD</fullName>
                </value>
                <value>
                    <fullName>DDAG</fullName>
                </value>
                <value>
                    <fullName>Enterprise Billing - NAD</fullName>
                </value>
                <value>
                    <fullName>ESC Advanced Billing</fullName>
                </value>
                <value>
                    <fullName>ESC Advanced Tech Agent</fullName>
                </value>
                <value>
                    <fullName>ESC Billing Level 1</fullName>
                </value>
                <value>
                    <fullName>ESC Control Desk</fullName>
                </value>
                <value>
                    <fullName>ESC Corporate CSM</fullName>
                </value>
                <value>
                    <fullName>ESC Digital Media</fullName>
                </value>
                <value>
                    <fullName>ESC Field Support Agent Terrestrial</fullName>
                </value>
                <value>
                    <fullName>ESC Field Support VSAT</fullName>
                </value>
                <value>
                    <fullName>ESC Franchisee Sales Support</fullName>
                </value>
                <value>
                    <fullName>ESC Frontline</fullName>
                </value>
                <value>
                    <fullName>ESC Frontline Level 2</fullName>
                </value>
                <value>
                    <fullName>ESC GEH</fullName>
                </value>
                <value>
                    <fullName>ESC Level 3 Agent</fullName>
                </value>
                <value>
                    <fullName>ESC Network Associates Team</fullName>
                </value>
                <value>
                    <fullName>ESC Onboarding</fullName>
                </value>
                <value>
                    <fullName>ESC Post Install Provisioning</fullName>
                </value>
                <value>
                    <fullName>ESC Program Management Support</fullName>
                </value>
                <value>
                    <fullName>ESC Projects</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Transaction To Provider Group</label>
    <nameField>
        <displayFormat>ATPG-{0000}</displayFormat>
        <label>Account Transaction To Prov Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Transaction To Provider Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ExpiryDateCannotBeSetInThePast</fullName>
        <active>true</active>
        <errorConditionFormula>OR( HSvc_Expiry_Date__c &lt; TODAY(), HSvc_Expiry_Date__c&lt; HSvc_Effective_Date__c)</errorConditionFormula>
        <errorDisplayField>HSvc_Expiry_Date__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
</CustomObject>